j--/tests/fail/ConditionalExpressions.java
package fail;

public class ConditionalExpressions {
    public static void main(String[] args) {
        System.out.println(1 ? 2 : 3);
    }
}
